Add more parraf to welcome page

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -2,3 +2,25 @@
 	<h1>Welcome to Number Prettifier</h1>
 	<p>Simple app that allows you to transforme raw number into a short prettify version as a string.</p>
 </div>
+<div class="row">
+	<div class="col-md-5">
+		<div class="text-center">
+		<%= image_tag "change_icon",  size: '249x203'%>
+		</div>
+		<h3>Discover a number Prettify version</h3>
+		<p>This app, support natively prettifying number up to a Trillion in short scale</p>
+		<p>
+			<%= link_to "Start prettifying", root_path, class: 'btn btn-primary' %>
+		</p>
+	</div>
+	<div class="col-md-5 col-md-offset-2">
+		<div class="text-center">
+		<%= image_tag "manage_icon", size: '249x203'%>
+		</div>
+		<h3>Add and manage your own short scale to prettify</h3>
+		<p>This app, support natively prettifying number up to a Trillion in short scale</p>
+		<p>
+			<%= link_to "Start prettifying", root_path, class: 'btn btn-primary' %>
+		</p>
+	</div>
+</div>
