First Implementation of ajax form to prettify a number

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,6 +1,9 @@
 <div class="jumbotron">
 	<h1>Welcome to Number Prettifier</h1>
-	<p>Simple app that allows you to transforme raw number into a short prettify version as a string.</p>
+	<p>Simple app that allows you to transforms raw number into a short prettify version as a string.</p>
+	<p>
+		<%= link_to "Start prettifying", pretty_numbers_path, class: 'btn btn-primary' %>
+	</p>
 </div>
 <div class="row">
 	<div class="col-md-5">
@@ -9,9 +12,6 @@
 		</div>
 		<h3>Discover a number Prettify version</h3>
 		<p>This app, support natively prettifying number up to a Trillion in short scale</p>
-		<p>
-			<%= link_to "Start prettifying", root_path, class: 'btn btn-primary' %>
-		</p>
 	</div>
 	<div class="col-md-5 col-md-offset-2">
 		<div class="text-center">
@@ -19,8 +19,5 @@
 		</div>
 		<h3>Add and manage your own short scale to prettify</h3>
 		<p>This app, support natively prettifying number up to a Trillion in short scale</p>
-		<p>
-			<%= link_to "Start prettifying", root_path, class: 'btn btn-primary' %>
-		</p>
 	</div>
 </div>
