Add partial to displays result on index page

--- a/app/views/pretty_numbers/prettify.js.erb
+++ b/app/views/pretty_numbers/prettify.js.erb
@@ -1,2 +1,2 @@
-console.log("Ready to prettify");
-console.log('<%= @result %>');
+
+$("#result").html("<%= escape_javascript(render partial: 'pretty_numbers/partials/result', locals: { result: @result } ) %>"); 
