--- a/app/views/pretty_numbers/index.html.erb
+++ b/app/views/pretty_numbers/index.html.erb
@@ -5,4 +5,6 @@
 		<%= f.number_field :value,  :step => 'any' %>
 		<%= f.submit "Prettify Number Now"%>
 	<% end %>
+
+	<div id="result"></div>
 </div>
