--- a/app/views/pretty_numbers/partials/_result.html.erb
+++ b/app/views/pretty_numbers/partials/_result.html.erb
@@ -1,8 +1,5 @@
-<div class="row">
-	<div class="col-md-6 col-md-offset-3">
-		<h3>Result</h3>
-		<div>
-			<p>Your prettify number is: <%= @result %></p>
-		</div>
-	</div>
+
+<div class="text-center">
+	<h3>Result</h3>
+	<p class="bg-primary" ">Your prettify number is: <strong><%= @result %></strong></p>
 </div>
