--- a/app/views/pretty_numbers/prettify.js.erb
+++ b/app/views/pretty_numbers/prettify.js.erb
@@ -1,2 +1,2 @@
 
-$("#result").html("<%= escape_javascript(render partial: 'pretty_numbers/partials/result', locals: { result: @result } ) %>"); 
+$("#result").html("<%= escape_javascript(render partial: 'pretty_numbers/partials/result') %>"); 
