Change style of view pretty_number index, clear form after submit

--- a/app/views/pretty_numbers/partials/_result.html.erb
+++ b/app/views/pretty_numbers/partials/_result.html.erb
@@ -1,5 +1,5 @@
 
 <div class="text-center">
-	<h3>Result</h3>
-	<p class="bg-primary" ">Your prettify number is: <strong><%= @result %></strong></p>
+	<h3>Your prettify number is:</h3>
+	<p class="bg-primary"> <strong><%= @result %></strong></p>
 </div>
