--- a/app/views/pretty_numbers/prettify.js.erb
+++ b/app/views/pretty_numbers/prettify.js.erb
@@ -1,2 +1,3 @@
 
-$("#result").html("<%= escape_javascript(render partial: 'pretty_numbers/partials/result') %>"); 
+$('#number_value').val(''); 
+$("#result").html("<%= escape_javascript(render partial: 'pretty_numbers/partials/result') %>");
