--- a/app/views/pretty_numbers/index.html.erb
+++ b/app/views/pretty_numbers/index.html.erb
@@ -1,9 +1,13 @@
-<h1 class="text-center">Prettify Your Number</h1>
+<div class="page-header">	
+	<h1 class="text-center">Prettify Your Number</h1>
+</div>
 <div class="col-md-6 col-md-offset-3">
 
-	<%= form_for :number, :url => url_for(:controller => 'pretty_numbers', :action => 'prettify', method: 'post'), remote: true do |f| %>
-		<%= f.number_field :value,  :step => 'any' %>
-		<%= f.submit "Prettify Number Now"%>
+	<%= form_for :number, html: {class: 'form-inline'}, :url => url_for(:controller => 'pretty_numbers', :action => 'prettify', method: 'post'), remote: true do |f| %>
+	<div class="form-group col-md-offset-2">	
+		<%= f.number_field :value, class: 'form-control', placeholder: 'Enter a number',  :step => 'any' %>
+	</div>
+	<%= f.submit "Prettify Number Now", class: 'btn btn-success'%>
 	<% end %>
 
 	<div id="result" class="row"></div>
