--- a/app/views/pretty_numbers/index.html.erb
+++ b/app/views/pretty_numbers/index.html.erb
@@ -1,5 +1,5 @@
 <div class="page-header">	
-	<h1 class="text-center">Prettify Your Number</h1>
+	<h1 class="text-center">Prettify your number</h1>
 </div>
 <div class="col-md-6 col-md-offset-3">
 
