--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -12,8 +12,16 @@
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li class="active">
-        <%= link_to 'Home', root_path%>
+          <%= link_to 'Home', root_path%>
         </li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <% if !user_signed_in? %>
+        <li class="active"><%= link_to 'Sign in', new_user_session_path %></li>
+        <li><%= link_to 'Sign up!', new_user_registration_path %></li>
+        <% else %>
+        <li class="active"><%= link_to 'Sign out', destroy_user_session_path, method: :delete  %></li>
+        <% end %>
       </ul>
     </div><!--/.nav-collapse -->
   </div><!--/.container-fluid -->
