--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,45 @@
-<h2>Sign up</h2>
+<div class="col-md-6 col-md-offset-3">
+ <div class="page-header text-center">
+  <h2>Sign up</h2>
+</div> 
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+<%= form_for(resource, as: resource_name,html: {class: 'form-horizontal'}, url: registration_path(resource_name)) do |f| %>
+<%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+<div class="form-group">
+  <%= f.label :email, class: 'col-sm-2 control-label' %>
+  <div class="col-sm-10">  
+    <%= f.email_field :email, autofocus: true, class: 'form-control' %>
   </div>
+</div>
 
-  <div class="field">
-    <%= f.label :password %>
+<div class="form-group">
+  <%= f.label :password , class: 'col-sm-2 control-label'%>
+  <div class="col-sm-10"> 
     <% if @minimum_password_length %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
+    <% end %><br/>
+    <%= f.password_field :password, autocomplete: "off", class: 'form-control' %>
   </div>
+</div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
+<div class="form-group">
+  <%= f.label :password_confirmation, class: 'col-sm-2 control-label' %>
+  <div class="col-sm-10"> 
+    <%= f.password_field :password_confirmation, autocomplete: "off" , class: 'form-control'%>
   </div>
+</div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
+<div class="form-group">
+  <div class="col-sm-offset-2 col-sm-10">
+    <%= f.submit "Sign up", class: 'btn btn-primary' %>
   </div>
+</div>
 <% end %>
+<div class="row">
+  <div class="col-sm-offset-2 col-sm-10">
+    <%= render "devise/shared/links" %>
+  </div>
+</div>
 
-<%= render "devise/shared/links" %>
+</div>
