--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -18,6 +18,6 @@
 		<%= image_tag "manage_icon", size: '249x203'%>
 		</div>
 		<h3>Add and manage your own short scale to prettify</h3>
-		<p>This app, support natively prettifying number up to a Trillion in short scale</p>
+		<p>For register users only, Manage and add more short scale as need it. Have Fun!</p>
 	</div>
 </div>
