--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,27 @@
-<h2>Forgot your password?</h2>
+<div class="page-header text-center">	
+	<h2>Forgot your password?</h2>
+</div>
+<div class="col-md-6 col-md-offset-3">
+	
+	<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { class: 'form-horizontal',method: :post }) do |f| %>
+	<%= devise_error_messages! %>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
+	<div class="form-group">
+		<%= f.label :email, class: 'col-sm-2 control-label' %>
+		<div class="col-sm-10">	
+			<%= f.email_field :email, autofocus: true, class: 'form-control' %>
+		</div>
+	</div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+	<div class="form-group">
+		<div class="col-sm-offset-2 col-sm-10">	
+			<%= f.submit "Send me reset password instructions", class: 'btn btn-success' %>
+		</div>
+	</div>
+	<% end %>
+	<div class="row">
+		<div class="col-sm-offset-2 col-sm-10">	
+			<%= render "devise/shared/links" %>
+		</div>	
+	</div>
+</div>
