--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,8 @@
 <body>
 	<%= render 'layouts/navbar' %>
 	<div class="container">	
-		<p class="notice"><%= notice %></p>
-        <p class="alert"><%= alert %></p>
+		<p class="notice text-center"><%= notice %></p>
+        <p class="alert text-center"><%= alert %></p>
 		<%= yield %>
 	</div>
 	<%= render 'layouts/footer' %>
