Add social login with google, github and twitter

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,6 +1,6 @@
 <div class="jumbotron">
 	<h1>Welcome to Number Prettifier</h1>
-	<p>Simple app that allows you to transforms raw number into a short prettify version as a string.</p>
+	<p>Simple app that allows you to transforms raw number with more that 6 digits into a short prettify version as a string.</p>
 	<p>
 		<%= link_to "Start prettifying", pretty_numbers_path, class: 'btn btn-primary' %>
 	</p>
