--- a/app/views/pretty_numbers/index.html.erb
+++ b/app/views/pretty_numbers/index.html.erb
@@ -39,7 +39,7 @@
 						<th id="name">Name</th>
 						<th id="abbreviation_name">Abbrev. Name</th> 
 						<th id="number_min_length">Minimum Number Length</th>
-						<th id="number_max_length">Maximus Number Length</th>
+						<th id="number_max_length">Maximum Number Length</th>
 						<th id="action"></th>
 					</tr>
 				</thead>
