--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -19,7 +19,16 @@
 <% end -%>
 
 <%- if devise_mapping.omniauthable? %>
-  <%- resource_class.omniauth_providers.each do |provider| %>
-    <%= link_to "Sign in with #{provider.to_s.titleize}", omniauth_authorize_path(resource_name, provider) %><br />
-  <% end -%>
+  	<div id="social-login">
+		<p><strong>Login with:</strong></p>
+	</div>
+	<div>		
+	  <%- resource_class.omniauth_providers.each do |provider| %>
+	  	<% if has_login_image(provider) %>
+	  		<%= link_to image_tag(login_image(provider)), omniauth_authorize_path(resource_name, provider), class: "login-button-#{provider}" %>
+	  	<% else %>
+	    	<%= link_to "Sign in with #{provider.to_s.titleize}", omniauth_authorize_path(resource_name, provider) %><br />
+	  	<% end %>
+	  <% end -%>
+	</div>
 <% end -%>
