--- a/test/fixtures/users.yml.erb
+++ b/test/fixtures/users.yml.erb
@@ -4,7 +4,10 @@
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
-# column: value
-#
+dan:
+  first_name: Dan
+  last_name: Test
+  email: test@example.org
+  password: 123greetings
+  encrypted_password: <%= User.new.send(:password_digest, '123greetings') %>
 
